[package]
name = "llm-json-repair"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Clean and parse JSON emitted by LLMs. Strips markdown fences, trailing commas, and surrounding prose so serde_json::from_str works."
authors = ["Mukunda Rao Katta <mukunda.vjcs6@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/MukundaKatta/llm-json-repair"
homepage = "https://github.com/MukundaKatta/llm-json-repair"
documentation = "https://docs.rs/llm-json-repair"
readme = "README.md"
keywords = ["llm", "json", "parsing", "ai", "anthropic"]
categories = ["parsing", "text-processing"]
exclude = [".github/*", "target/*"]

[dependencies]
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
thiserror = "2"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
